// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should provide defaults 1`] = `
<button
  class="button flex justify-center h-8 text-base cursor-pointer bg-transparent outline-none transition-opacity hover:opacity-75 border rounded border-solid py-1 px-2 uppercase text-center opacity-100"
  style="color: rgb(43, 138, 198); background: rgb(255, 255, 255); border-color: #2b8ac6;"
>
  <span
    class="truncate w-full h-full flex items-center justify-center"
  >
    
    &lt;span&gt;Button Inner&lt;/span&gt;
    
  </span>
</button>
`;

exports[`Button props should have a property for backgroundColor 1`] = `
<button
  class="button flex justify-center h-8 text-base cursor-pointer bg-transparent outline-none transition-opacity hover:opacity-75 border rounded border-solid py-1 px-2 uppercase text-center opacity-100"
  style="color: rgb(43, 138, 198); background: rgb(255, 255, 255); border-color: #2b8ac6;"
>
  <span
    class="truncate w-full h-full flex items-center justify-center"
  >
    
    &lt;span&gt;Button Inner&lt;/span&gt;
    
  </span>
</button>
`;

exports[`Button props should have a property for borderColor 1`] = `
<button
  class="button flex justify-center h-8 text-base cursor-pointer bg-transparent outline-none transition-opacity hover:opacity-75 border rounded border-solid py-1 px-2 uppercase text-center opacity-100"
  style="color: rgb(43, 138, 198); background: rgb(255, 255, 255); border-color: #fff;"
>
  <span
    class="truncate w-full h-full flex items-center justify-center"
  >
    
    &lt;span&gt;Button Inner&lt;/span&gt;
    
  </span>
</button>
`;

exports[`Button props should have a property for disabled 1`] = `
<button
  class="button flex justify-center h-8 text-base cursor-pointer bg-transparent outline-none transition-opacity hover:opacity-75 border rounded border-solid py-1 px-2 uppercase text-center opacity-50"
  style="color: rgb(43, 138, 198); background: rgb(255, 255, 255); border-color: #2b8ac6;"
>
  <span
    class="truncate w-full h-full flex items-center justify-center"
  >
    
    &lt;span&gt;Button Inner&lt;/span&gt;
    
  </span>
</button>
`;

exports[`Button props should have a property for href 1`] = `
<a
  class="button flex justify-center h-8 text-base cursor-pointer bg-transparent outline-none transition-opacity hover:opacity-75 border rounded border-solid py-1 px-2 uppercase text-center opacity-100"
  href="http://foo.bar"
  style="color: rgb(43, 138, 198); background: rgb(255, 255, 255); border-color: #2b8ac6;"
>
  <span
    class="truncate w-full h-full flex items-center justify-center"
  >
    
    &lt;span&gt;Button Inner&lt;/span&gt;
    
  </span>
</a>
`;

exports[`Button props should have a property for textColor 1`] = `
<button
  class="button flex justify-center h-8 text-base cursor-pointer bg-transparent outline-none transition-opacity hover:opacity-75 border rounded border-solid py-1 px-2 uppercase text-center opacity-100"
  style="color: rgb(255, 255, 255); background: rgb(255, 255, 255); border-color: #2b8ac6;"
>
  <span
    class="truncate w-full h-full flex items-center justify-center"
  >
    
    &lt;span&gt;Button Inner&lt;/span&gt;
    
  </span>
</button>
`;
